argus-106: updated profile page to allow editing of user info

--- a/argusApp/package.json
+++ b/argusApp/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "node-sass": "^4.13.0",
+        "vue-google-charts": "^0.3.3",
         "vue-router": "^3.5.3",
         "vuex": "^3.6.2"
     }
