--- a/argusApp/package.json
+++ b/argusApp/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "node-sass": "^4.13.0",
         "vue-router": "^3.5.3",
+        "vue-google-charts": "^0.3.3",
         "vuex": "^3.6.2"
     }
 }
